# mba

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.prod.yml  docker-compose.yml  gunicorn.conf.py  pyproject.toml  settings.env.json  test.http
app/: __init__.py  config.py  dependencies.py  logger.py
app/clients/: __init__.py  base.py  carlsjr.py  cypress.py  karzo.py  multicarnes.py
app/models/: schemas.py
app/routers/: mba.py
app/services/: market_basket.py
test/: README.md  debug_search.py  quick_test.py  tester.py
